--- a/cookies.html
+++ b/cookies.html
@@ -187,17 +187,15 @@
   >
     <div class="flex items-center justify-between mb-4">
       <span class="text-sm font-medium text-slate-500">Navigation</span>
-      <button
-        id="drawerClose"
-        class="w-9 h-9 grid place-items-center rounded-lg border border-white/20 text-white hover:bg-white/10 transition"
-        aria-label="Menü schließen"
-      >
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-          <path
-            d="M18.3 5.71L12 12.01l-6.3-6.3L4.29 7.12l6.3 6.3l-6.3 6.3l1.41 1.41l6.3-6.3l6.3 6.3l1.41-1.41l-6.3-6.3l6.3-6.3z"
-          />
-        </svg>
-      </button>
+    <button
+  id="drawerClose"
+  class="drawer-close-btn"
+  aria-label="Menü schließen"
+>
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+    <path d="M18.3 5.71L12 12.01l-6.3-6.3L4.29 7.12l6.3 6.3l-6.3 6.3l1.41 1.41l6.3-6.3l6.3 6.3l1.41-1.41l-6.3-6.3l6.3-6.3z"/>
+  </svg>
+</button>
     </div>
 
     <nav class="flex flex-col items-center gap-4 text-base" aria-label="Mobiles Hauptmenü">
