--- a/impressum.html
+++ b/impressum.html
@@ -176,7 +176,7 @@
           <a href="#kontakt" class="btn hidden md:inline-flex">Jetzt Beratung</a>
           <button
             id="burger"
-            class="md:hidden inline-flex items-center justify-center w-10 h-10 rounded-xl border border-black/10"
+            class="lg:hidden inline-flex items-center justify-center w-10 h-10 rounded-xl border border-black/10"
             aria-label="Menü öffnen"
             title="Menü"
           >
