--- a/index.html
+++ b/index.html
@@ -220,16 +220,7 @@
 
     <!-- Hero -->
     <section class="hero section hero--premium relative overflow-hidden hero--v3" aria-labelledby="heroTitle">
-      <!-- Deko-Gradient im Hintergrund -->
-      <div
-        class="pointer-events-none absolute inset-0 bg-gradient-to-br from-[#F3EBDD] via-[#E4D7C3] to-[#C1D3C4] opacity-80"
-        aria-hidden="true"></div>
-      <div
-        class="pointer-events-none absolute -right-[18%] -top-[18%] h-64 w-64 rounded-full bg-white/50 blur-3xl"
-        aria-hidden="true"></div>
-      <div
-        class="pointer-events-none absolute -left-[10%] bottom-[-10%] h-72 w-72 rounded-full bg-[#8B9478]/20 blur-3xl"
-        aria-hidden="true"></div>
+
 
       <div class="hero__inner fade-in relative z-[1]">
         <div class="hero__content max-w-2xl">
@@ -254,19 +245,19 @@
 
           <!-- Premium-Feature-Liste -->
           <ul class="hero__features mt-6 grid gap-2 sm:grid-cols-2 text-sm">
-            <li class="inline-flex items-center gap-2 rounded-full bg-white/70 px-3 py-2 shadow-sm">
+            <li class="inline-flex items-center gap-2 ">
               <i class="fa-solid fa-heart text-[var(--mint,#8B9478)]"></i>
               <span>Flexibel &amp; individuell abgestimmt</span>
             </li>
-            <li class="inline-flex items-center gap-2 rounded-full bg-white/70 px-3 py-2 shadow-sm">
+            <li class="inline-flex items-center gap-2 ">
               <i class="fa-solid fa-heart text-[var(--mint,#8B9478)]"></i>
               <span>Langjährige Erfahrung im Pflegealltag</span>
             </li>
-            <li class="inline-flex items-center gap-2 rounded-full bg-white/70 px-3 py-2 shadow-sm">
+            <li class="inline-flex items-center gap-2 ">
               <i class="fa-solid fa-heart text-[var(--mint,#8B9478)]"></i>
               <span>Familiärer Pflegedienst auf Augenhöhe</span>
             </li>
-            <li class="inline-flex items-center gap-2 rounded-full bg-white/70 px-3 py-2 shadow-sm">
+            <li class="inline-flex items-center gap-2">
               <i class="fa-solid fa-heart text-[var(--mint,#8B9478)]"></i>
               <span>Unterstützung für Angehörige &amp; Familien</span>
             </li>
@@ -316,7 +307,7 @@
     </section>
 
     <!-- Über uns -->
-    <section id="about" class="section relative" aria-labelledby="aboutTitle">
+    <section id="about" class="section fade-in  relative" aria-labelledby="aboutTitle">
       <div class="max-w-6xl lg:max-w-7xl mx-auto px-4">
         <div class="about-card">
           <div class="about-card-inner grid md:grid-cols-2 gap-8 lg:gap-12 items-center">
@@ -690,7 +681,7 @@
     </section>
 
     <!-- Kooperationspartner -->
-    <section id="partner" class="relative py-16 md:py-20 bg-[#F3EBDD] overflow-hidden" aria-labelledby="partnerTitle">
+    <section id="partner" class="relative fade-in  py-16 md:py-20 bg-[#F3EBDD] overflow-hidden" aria-labelledby="partnerTitle">
       <div class="max-w-6xl mx-auto px-4">
         <header class="text-center mb-10">
           <p class="text-[0.7rem] tracking-[0.35em] uppercase text-[#4B5338]/70 mb-2">Netzwerk &amp; Kooperation</p>
@@ -860,10 +851,10 @@
     </section>
 
     <!-- Karriere -->
-    <section id="karriere" class="section scroll-pad relative" aria-labelledby="karriereTitle">
+    <section id="karriere" class="section scroll-pad relative " aria-labelledby="karriereTitle">
 
 
-      <div class="fade-in max-w-6xl xl:max-w-7xl mx-auto px-4 relative z-[1]">
+      <div class="fade-in max-w-6xl xl:max-w-7xl mx-auto px-4 relative z-[1] ">
         <!-- Header -->
         <header class="text-center mb-8">
           <p class="text-[0.7rem] tracking-[0.35em] uppercase text-[#4B5338]/70 mb-1">Jobs &amp; Perspektiven</p>
@@ -942,7 +933,7 @@
     </section>
 
     <!-- Feedback -->
-    <section id="reviews" class="relative py-16 md:py-20 bg-[#F3EBDD] overflow-hidden" aria-labelledby="reviewsTitle">
+    <section id="reviews" class="relative fade-in  py-16 md:py-20 bg-[#F3EBDD] overflow-hidden" aria-labelledby="reviewsTitle">
       <div class="max-w-6xl mx-auto px-4 relative z-[1]">
         <header class="mb-10 text-center">
           <p class="text-[0.7rem] tracking-[0.35em] uppercase text-[#4B5338]/70 mb-2">Stimmen unserer Familien</p>
