--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <body id="top">
     <!-- Header -->
-    <header class="sticky top-0 z-50 border-b border-white/10 bg-[#26352C]/90 dark:bg-[#1b2a22]/90" role="banner">
+    <header class="site-header sticky top-0 z-50 border-b border-white/10 bg-[#26352C]/90 dark:bg-[#1b2a22]/90" data-header role="banner">
       <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
         <div class="flex items-center gap-3">
   <a href="index.html" class="flex items-center gap-3 group">
@@ -1715,6 +1715,7 @@
     </svg>
 
     <!-- Scripts -->
+    
     <script>
       /*
       if ("serviceWorker" in navigator) {
